# noob-engine

./: .gitmodules  CMakeLists.txt  README.md  conanfile.py
docs/: ARCHITECTURE.md  TODO.md  uml.mdj
src/: engine.h  header  scenenode.h  treetemplate.h
src/engine/: .engine.cpp.swp  engine.cpp  engine.h  mesh.h  renderstate.h  scenecamera.h  scenelight.h  scenenode.h  sceneprogram.h  scenetransform.h  scenevisual.h  treetemplate.h
src/gui/: gui.cpp  gui.h  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h  main.cpp
src/utils/: logger.h
src/viewer/: cameracontroller.h  editor.cpp  generator.h  main.cpp  primitives.h  scriptcontrol.h  textureviewer.cpp
vendors/: CMakeLists.txt
vendors/dirent/: windirent.h
vendors/json/: CMakeLists.txt  json
